Add in module thirdparty

--- a/com.airsltd.core.parse/pom.xml
+++ b/com.airsltd.core.parse/pom.xml
@@ -72,7 +72,7 @@
 		<groupId>com.airsltd.osgi</groupId>
 		<artifactId>modules</artifactId>
 		<version>0.0.1-SNAPSHOT</version>
-		<relativePath>../modules</relativePath>
+		<relativePath>../com.airsltd.core.modules</relativePath>
 	</parent>
 	<artifactId>parse</artifactId>
 	<issueManagement>
