--- a/com.airsltd.core.lisp/pom.xml
+++ b/com.airsltd.core.lisp/pom.xml
@@ -77,7 +77,7 @@
 		<groupId>com.airsltd.osgi</groupId>
 		<artifactId>modules</artifactId>
 		<version>0.0.1-SNAPSHOT</version>
-		<relativePath>../modules</relativePath>
+		<relativePath>../com.airsltd.core.modules</relativePath>
 	</parent>
 	<artifactId>lisp</artifactId>
 	<issueManagement>
