Fix issues with Sonar analysis.

--- a/com.airsltd.core.model/sonar-project.properties
+++ b/com.airsltd.core.model/sonar-project.properties
@@ -1,7 +1,7 @@
 # must be unique in a given SonarQube instance
 sonar.projectKey=com.airsltd.core.model
 # this is the name displayed in the SonarQube UI
-sonar.projectName=AIRS Core Library
+sonar.projectName=AIRS Core Model Library
 sonar.projectVersion=0.0.1-SNAPSHOT
  
 # Path is relative to the sonar-project.properties file. Replace "\" by "/" on Windows.
