More work on sonar build failure

--- a/com.airsltd.core.modules/sonar-project.properties
+++ b/com.airsltd.core.modules/sonar-project.properties
@@ -3,12 +3,14 @@ sonar.projectKey=com.airsltd.core.modules
 # this is the name displayed in the SonarQube UI
 sonar.projectName=AIRS Core Build Module
 sonar.projectVersion=0.0.1-SNAPSHOT
+
+sonar.modules=com.airsltd.core, com.airsltd.core.data, com.airsltd.core.lisp, com.airsltd.core.math, com.airsltd.core.model, com.airsltd.core.model, com.airsltd.core.parse, com.airsltd.core.xml
  
 # Path is relative to the sonar-project.properties file. Replace "\" by "/" on Windows.
 # Since SonarQube 4.2, this property is optional if sonar.modules is set. 
 # If not set, SonarQube starts looking for source code from the directory containing 
 # the sonar-project.properties file.
-sonar.sources=.
+sonar.sources=src
  
 # Encoding of the source code. Default is default system encoding
 #sonar.sourceEncoding=UTF-8
