Quick fix to sonar properties

--- a/com.airsltd.core.modules/sonar-project.properties
+++ b/com.airsltd.core.modules/sonar-project.properties
@@ -4,7 +4,7 @@ sonar.projectKey=com.airsltd.core.modules
 sonar.projectName=AIRS Core Build Module
 sonar.projectVersion=0.0.1-SNAPSHOT
 
-sonar.modules=com.airsltd.core, com.airsltd.core.data, com.airsltd.core.lisp, com.airsltd.core.math, com.airsltd.core.model, com.airsltd.core.model, com.airsltd.core.parse, com.airsltd.core.xml
+sonar.modules=com.airsltd.core, com.airsltd.core.data, com.airsltd.core.lisp, com.airsltd.core.math, com.airsltd.core.model, com.airsltd.core.parse, com.airsltd.core.xml
  
 # Path is relative to the sonar-project.properties file. Replace "\" by "/" on Windows.
 # Since SonarQube 4.2, this property is optional if sonar.modules is set. 
